Fixes styling of slideins to remove the overlapping of slide in information

--- a/webofneeds/won-owner-webapp/src/main/webapp/style/_slidein.scss
+++ b/webofneeds/won-owner-webapp/src/main/webapp/style/_slidein.scss
@@ -5,7 +5,6 @@
 
 @mixin slide-in() {
   grid-column: 3;
-  grid-row: 1;
 
   justify-content: center;
   align-items: center;
@@ -77,6 +76,7 @@ won-slide-in {
   $toggleWidth: 1.5rem;
   $maxSlideInWidth: $maxContentWidth - $toggleWidth - ($togglePadding * 2);
   grid-template-columns: 1fr 2.5rem minmax(min-content, $maxSlideInWidth) 1fr;
+  grid-auto-flow: column;
 
   background: black; //Fallback in case the browser does not support css variables
   background: $won-secondary-color;
